@@ -18,8 +18,6 @@ class DefaultController < ApplicationController
   end
 
   def get_user_details_by_authentication_token
-    debugger
-    puts "token = #{params[:token]}"
     params_token = params[:token]
     user = User.find_by_authentication_token(params_token)
     render  :status => 200,
@@ -29,7 +27,6 @@ class DefaultController < ApplicationController
               :refresh_token => user.refresh_token,
               :authentication_token => params_token, 
             }
-
   end
 
 
