@@ -1,5 +1,8 @@
 class Users::PasswordsController < Devise::PasswordsController
 
+  skip_before_filter :require_no_authentication, :only => [ :create ]
+
+
   # GET /resource/password/new
   # def new
   #   super
