@@ -5,23 +5,18 @@
   </head>
   <body>
     <p>
-      Dear <%=@resource.first_name %> <%=@resource.last_name %>,<br/><br/>
-      You recently selected <%=@resource.email %> as your new Yomu Labs Id. To verify this email address belongs to you, click the link below and then sign in using your Yomu Labs ID and password.<br/><br/>
-      <a href="http://localhost:3000/ReconfirmUser/?confirmation_token=<%=@token %>">Heroku Staging Verify Now</a>
+      Hi,<br/><br/>
+      Welcome to Yomu Lab. Thanks for signing up for a free account. Click this link below to confirm your account.
       <br/>
-      <%= link_to 'Local Host Verify Now', confirmation_url(@resource, confirmation_token: @token) %>
       <br/>
-      <a href="https://yomu-lab-staging.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">Heroku Staging Verify Now</a>
-    </p>
-    <p>
-      Why you received this email.<br/>
-      Yomu Labs requests verification whenever an email address is selected as an Yomu Labs ID. Your Yomu Labs cannot be used until you verify it.<br/>
-      If you didn’t make this change or if you believe an unauthorized person is attempting to access your account, you can reset your password by going to Yomu Labs ID.
+      <a href="http://localhost:3000/ReconfirmUser/?confirmation_token=<%=@token %>">Localhost:3000-Verify-Now</a>
       <br/>
-      To login to the site, just follow this link: <a href="#">Yomu Labs Sign In</a>
-    </p>
-    <p>
-      Sincerely,<br/>
+      <%= link_to 'Local-Host-Verify-Now', confirmation_url(@resource, confirmation_token: @token) %>
+      <br/>
+      <a href="https://yomu-lab-staging.herokuapp.com/ReconfirmUser/?confirmation_token=<%=@token %>">
+        yomu-lab-staging-verify-now
+      </a>
+      <br/>
       Yomu Labs Support
     </p>
   </body>
