@@ -1,40 +1,0 @@
-
-<!--
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%#= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-<p><a href="http://localhost:3000/ResetPassword/?token=<%=@token %>"></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
-=-->
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h1><%= @subject %></h1>
-    <p>
-      Dear <%=@resource.first_name %> <%=@resource.last_name %>,<br/><br/>
-      You recently initiated a password reset for your Yomu Labs ID. To complete the process, click the link below.
-      <br/>
-      If You are using 
-      <a href="https://yomu-lab-staging.herokuapp.com/ResetPassword/?token=<%=@token %>">Reset Now</a>
-    </p>
-    <p>
-      This link will expire three hours after this email was sent.<br/>
-      If you didn’t make this request, it's likely that another user has entered your email address by mistake and your account is still secure. If you believe an unauthorized person has accessed your account, you can reset your password at Yomu Labs User Settings.
-      <br/><br/>
-      To login to the site, just follow this link: <a href="https://yomu-lab-staging.herokuapp.com/Login">Yomu Labs Sign In</a>
-    </p>
-    <p>
-      Thanks for joining and have a great day!<br/>
-      Yomu Labs Support
-    </p>
-  </body>
-</html>
