@@ -6,18 +6,15 @@
   <body>
     <h1><%= @subject %></h1>
     <p>
-      Dear <%=@user.first_name %> <%=@user.last_name %>,
-      You recently initiated a password reset for your Yomu Labs ID. To complete the process, click the link below.
+      Hi,
+      <br/>
+      Information was requested to change your password. You can do this using the link below:
       <a href="<%=reset_password_url %>">Reset Now</a>
     </p>
     <p>
-      This link will expire three hours after this email was sent.<br/>
-      If you didn’t make this request, it's likely that another user has entered your email address by mistake and your account is still secure. If you believe an unauthorized person has accessed your account, you can reset your password at Yomu Labs User Settings.
-      <br/>
-      To login to the site, just follow this link: <a href="<%=@url%>">Yomu Labs Sign In</a>
+      If you didn't request this, please ignore this email. Your password will not change until you access the button above and create a new one.
     </p>
     <p>
-      Thanks for joining and have a great day!<br/>
       Yomu Labs Support
     </p>
   </body>
